--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           key: trunk-${{ runner.os }}
 
       - name: Trunk Check
-        uses: trunk-io/trunk-action@v0.5.0-beta
+        uses: trunk-io/trunk-action@v0.4.0-beta
 
   # Push image to GitHub Packages
   build-and-push-image:
@@ -62,7 +62,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build --tag $IMAGE_NAME --file app/Dockerfile app/  --label "runnumber=${GITHUB_RUN_ID}"
+        run: docker build --tag $IMAGE_NAME . --label "runnumber=${GITHUB_RUN_ID}"
 
       - name: Log into GitHub Container Registry
         run: echo "${{ secrets.CONTAINER_REGISTRY_GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
